--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="menu_send">Send</string>
     <string name="menu_profile">Profil</string>
     <string name="menu_child">Data Anak</string>
-    <string name="menu_show_child">Lihat Data Anak</string>
+    <string name="menu_show_child">Datail Data Anak</string>
+    <string name="menu_show_nutrient">Detail Data Kandungan Gizi</string>
     <string name="menu_create_child">Tambah Data Anak</string>
     <string name="menu_nutrient">Data Kandungan Gizi</string>
     <string name="menu_create_nutrient">Tambah Data Kandungan Gizi</string>
@@ -41,6 +42,11 @@
     <string name="txt_child_name_with_asterisk">Nama Anak*</string>
     <string name="txt_date_of_birth_with_asterisk">Tanggal Lahir*</string>
     <string name="txt_child_gender_with_asterisk">Jenis Kelamin*</string>
+    <string name="txt_nutrient_name_with_asterisk">Nama Kandungan Gizi**</string>
+    <string name="txt_carbohydrate_with_asterisk">Karbohidrat*</string>
+    <string name="txt_calories_with_asterisk">Kalori*</string>
+    <string name="txt_fat_with_asterisk">Lemak*</string>
+    <string name="txt_protein_with_asterisk">Protein*</string>
     <string name="txt_full_name">Nama Lengkap</string>
     <string name="txt_email_address">Alamat Email</string>
     <string name="txt_full_name_with_colon">Nama Lengkap:&#160;</string>
@@ -50,4 +56,12 @@
     <string name="txt_gender">Jenis Kelamin</string>
     <string name="txt_date_of_birth_with_colon">Tanggal Lahir:&#160;</string>
     <string name="txt_date_of_birth">Tanggal Lahir</string>
+    <string name="txt_nutrient_name_with_colon">Nama Kandungan GIzi</string>
+    <string name="txt_calories_with_colon">Kalori:</string>
+    <string name="txt_fat_with_colon">Lemak:</string>
+    <string name="txt_protein_with_colon">Protein:</string>
+    <string name="txt_carbohydrate_with_colon">Karbohidrat:</string>
+    <string name="txt_nutrient_name">Nama Kandungan Gizi</string>
+    <string name="txt_carbohydrate">Karbohidrat</string>
+    <string name="txt_calories">Kalori</string>
 </resources>
